Use StandardCharsets as opposed to string